--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "example project react with nodejs",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
     "build": "cd front-end && npm run build",
     "install-front-end": "cd front-end && npm install",
     "dev": "nodemon ./server.js localhost 3080",
     "front-end": "cd front-end && npm start",
     "heruko-build":"npm run install-front-end && npm run build",
-    "start": "node server.bundle.js",
     "mac": "concurrently   -n, 'server,front-end'    -c, 'green,blue' \"nodemon server.js\" \"npm run front-end\""
   },
   "repository": {
