--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "cd front-end && npm run build",
-    "install-front-end": "cd front-end && npm install",
+    "install-front-end": "cd front-end && npm i",
     "front-end": "cd front-end && npm install",
     "heruko-postbuild":"npm run install-front-end && npm run build",
     "dev": "concurrently   -n, 'server,front-end' -c, 'green,blue' \"nodemon server.js\" \"npm run front-end\""
