--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "cd front-end && npm run build",
+    "install-front-end": "cd front-end && npm install",
+    "front-end": "cd front-end && npm start",
+    "heruko-build":"npm run install-front-end && npm run build",
+    "dev": "concurrently   -n, 'server,front-end' -c, 'green,blue' \"nodemon server.js\" \"npm run front-end\""
   },
   "repository": {
     "type": "git",
